css/styles.css
body, html {
    height: 100%;
    width: 100%;
}
body, h1, h2, h3, h4, h5, h6 {
    font-family: Roboto;
    font-weight: 700;
}
.navbar-toggle {
    border-width: 0;
}

.img-nav {
    display: inline-block;
    min-height: 50px;
    max-height: 50px; 
}

p, ol > li {
    font-family: Roboto;
    font-weight: 400;
}
p.contact {
    font-size: 18px;
    font-weight: 400;
}
.navbar .nav > li > a {
    color: #FFF;
}
.accordion-toggle {
    font-size: 16px;
    margin-top: 12px;
    display: inline-block;
}
.navbar {
    background-color: #0a7e07;
}
.lb {
    color: #FFF;
    font-weight: 300;
}
.lead {
    font-size: 18px;
    font-weight: 300;
}
.intro-header-top {
    background-color: #E0E0E0;
}
.intro-header {
    padding-top: 150px;
    padding-bottom: 150px;
    background: url(../img/cover.jpg) no-repeat top center;
    background-size: cover;
    text-align: left;
}
.intro-message {
    position: relative;
    padding-top: 20%;
}
.intro-message > h1 {
    font-size: 5em;
    font-weight: 300;
    margin: 0;
}
.intro-divider {
    width: 400px;
    border-top: 1px solid #f8f8f8;
    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
}
.intro-message > h3 {
    font-weight: 300;
}
.network-name {
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 400;
    letter-spacing: 2px;
}
.content-section-b {
    border-top: 1px solid #e7e7e7;
    border-bottom: 1px solid #e7e7e7;
    padding: 50px 0;
}
.section-heading {
    margin-bottom: 30px;
}
.section-heading-spacer {
    border-top: 3px solid #e7e7e7;
    width: 200px;
    float: left;
}
.banner {
    color: #f8f8f8;
    background: url(../img/cover.jpg) no-repeat center center;
    background-position-y: 20%;
    background-size: cover;
    text-align: center;
    padding: 100px 0;
}
.banner h2 {
    font-size: 3em;
    font-weight: 300;
    margin: 0;
}
.banner ul {
    margin-bottom: 0;
}
.banner .btn {
    padding: 20px;
}
.banner .btn .network-name {
    font-size: 1.2em;
    font-weight: 300;
}
.banner-social-buttons {
    margin-top: 0;
}
p.copyright {
    margin: 15px 0 0;
}
.content-section-a, footer {
    background-color: #f8f8f8;
    padding: 50px 0;
}
@media max-width 767px {
    .intro-message {
        padding-bottom: 15%;
    }
    .intro-message > h1 {
        font-size: 3em;
    }
    ul.intro-social-buttons > li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }
    .intro-divider {
        width: 100%;
    }
    .textvert > h2 {
        font-size: 1.75em;
    }
    .tb {
        text-align: center;
    }
    .section-heading-spacer {
        clear: both;
        display: none;
        margin-left: auto;
        margin-right: auto;
    }
    .banner h2 {
        font-size: 3em;
        margin: 0;
    }
    ul.banner-social-buttons > li {
        margin-bottom: 20px;
        padding: 0;
    }
    ul.intro-social-buttons > li:last-child, ul.banner-social-buttons > li:last-child {
        margin-bottom: 0;
    }
}
@media max-width 1199px {
    ul.banner-social-buttons {
        margin-top: 15px;
    }
}
@media min-width 1199px {
    .intro-header {
        padding-top: 50px;
        padding-bottom: 50px;
        background: url(../img/cover.jpg) no-repeat center center fixed;
        background-size: cover;
        text-align: left;
    }
    .banner {
        color: #f8f8f8;
        background: url(../img/cover.jpg) no-repeat center center fixed;
        background-position-y: 20%;
        background-size: cover;
        padding: 100px 0;
    }
}
@media min-width 767px {
    .short {
        max-height: 250px;
    }
    .shortPhone {
        max-height: 670px;
    }
    .tb {
        -ms-flex-pack: center;
        -ms-flex-align: center;
        -moz-box-pack: center;
        -moz-box-align: center;
        -webkit-box-pack: center;
        -webkit-box-align: center;
        display: box;
        box-pack: center;
        box-align: center;
    }
}

